# steward

./: .gitignore  BOOTSTRAP.md  CLAUDE.md  NEXT-STEPS.md  README.md  emitter-contract-check.md  main.py  project.yaml  pyproject.toml  spec-runner.config.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml  governance.yml
docs/: risk-classify.md
profiles/: authority.yaml  lite.yaml  risk-model.yaml  team.yaml
spec/: .executor-progress.txt  .executor-state.db  00-charter.md  10-requirements.md  20-design.md  30-acceptance.md  40-decomposition.md  design.md  maestro-base.yaml  requirements.md  tasks.md
src/steward/: __init__.py  graph.py  meta.py
src/steward/_vendor/: __init__.py  spec_meta.py
src/steward/compile/: __init__.py  _yaml.py  cli.py  decomposition.py  delegation.py  project_yaml.py
src/steward/gatecheck/: __init__.py  checks.py  cli.py  git_facts.py
src/steward/riskclassify/: __init__.py  classify.py  cli.py  model.py  waivers.py
tests/: test_authority_policy.py  test_graph.py  test_meta.py
tests/compile/: test_decomposition.py  test_emitters.py
tests/contract/: test_compile_golden.py
tests/contract/golden/: delegation.yaml
tests/gatecheck/: test_checks.py  test_cli.py
tests/riskclassify/: test_classify.py  test_cli.py  test_model.py  test_waivers.py
workstreams/WS-002-gate-check/spec/: design.md  requirements.md  tasks.md
workstreams/WS-006-risk-model/: risk-model.example.yaml
workstreams/WS-006-risk-model/spec/: design.md  requirements.md  tasks.md
