[project]
name = "steward"
version = "0.1.0"
description = "Spec governance layer: gated multi-artifact authoring above spec-runner/Maestro"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "pyrefly",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steward"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
